dh-make-perl (0.54) UNRELEASED; urgency=low

  [ gregor herrmann ]
  * Change section to "perl" th match the changes in the overrides file.

  [ Damyan Ivanov ]
  * ignore --notest; instead, create debian/rules that obeys nocheck in
    DEB_BUILD_OPTIONS
    + add NEWS about that
    + remove --notest from POD

 -- gregor herrmann <gregoa@debian.org>  Thu, 09 Apr 2009 15:43:56 +0200

dh-make-perl (0.53) unstable; urgency=low

  [ Pierre Neyron ]
  * Fix apt-file dependency lookup if --dist is set to list of distribution,
    e.g. "{stable,testing}"

  [ Damyan Ivanov ]
  * default --dist to empty string, parsing all Contents files referenced in
    sources.list. Further addresses #517227

  [ gregor herrmann ]
  * Bump Standards-Version to 3.8.1 (dh-make-perl, tests and generated
    packages).
  * Remove leading article from test distributions' short description.
  * Remove spurious comma from Build-Depends and slightly rephrase short
    description.

  [ Ryan Niebur ]
  * if --pkg-perl, set the changelog to UNRELEASED by default
  * if --pkg-perl is given, and --dist is not, set dist = sid
  * add myself to uploaders
  * when refreshing, extract the debian/* copyright holders and years
    from debian/changelog
  * if the short description already starts with a space (for who knows
    what reason..), don't add a space after the :

 -- gregor herrmann <gregoa@debian.org>  Wed, 08 Apr 2009 22:54:04 +0200

dh-make-perl (0.52) unstable; urgency=low

  [ Damyan Ivanov ]
  * check if package named as the created one or containing modules with the
    same name already exists. Thanks to Brian Cassidy for bringing up the
    problem and Gregor Herrmann and Don Armstrong for the suggestions about
    the implementation
  * add cpan2deb 'flavour' of dh-make-perl. If it is called by that name, the
    behaviour changes for easy .deb creation.
  * add --locate command, showing if given Perl module is core, or in some
    Debian package