@@ -12,18 +12,14 @@ PERL ?= /usr/bin/perl
 
 build: build-stamp
 build-stamp:
-	dh_testdir
-	$(PERL) Build.PL installdirs=vendor
-	./Build
-	NO_NETWORK=1 ./Build test
-	touch build-stamp
+	NO_NETWORK=1 dh build
+	touch $@
 
 clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
+	dh clean
+	#rm -f build-stamp
 
-	# Add here commands to clean up after the build process.
+	# clean after test packages
 	for i in Strange-0.1 Strange-2.1; do\
 		if test -d "t/dists/$$i/debian"; then \
 		    ( \
@@ -35,37 +31,17 @@ clean:
 		fi \
 	done
 
-	! [ -f Build ] || ./Build realclean
-	dh_clean
-
 install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-
-	./Build install --destdir=$(INST) create_packlist=0
+	dh $@
 
 
 # Build architecture-independent files here.
 binary-arch: build install
-# We have nothing to do by default.
+# We have nothing to do
 
 # Build architecture-dependent files here.
 binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs README
-	dh_installman
-	dh_installchangelogs
-	dh_link usr/bin/dh-make-perl usr/bin/cpan2deb \
-		usr/share/man/man1/dh-make-perl.1p usr/share/man/man1/cpan2deb.1p
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_perl
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh $@
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary
