@@ -8,6 +8,9 @@ dh-make-perl (0.54) UNRELEASED; urgency=low
     DEB_BUILD_OPTIONS
     + add NEWS about that
     + remove --notest from POD
+  * rules, control, compat: migrate to DH7
+    + install links via debian/links, README via debian/docs
+    + this gives support to 'nocheck' in DEB_BUILD_OPTIONS (Closes: #523560)
 
  -- gregor herrmann <gregoa@debian.org>  Thu, 09 Apr 2009 15:43:56 +0200
 
